@@ -1,3 +1,9 @@
+2007-01-29  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: add option "experimental" to enable untested code
+	* feature: add option "auto crc" to calculate CRC32 during transfer
+	* feature: optimize RETR and STOR
+
 2007-01-19  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* bugfix: use group default perms when creating user (Closes: #0058)
